Fix dark mode opacity

--- a/src/assets/theming/_variables.scss
+++ b/src/assets/theming/_variables.scss
@@ -30,13 +30,17 @@ $sans-font: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial,
 // }
 
 @media (prefers-color-scheme: dark) {
- :root {
-  --background-color: #04162a;
-  --background-color-light: #062444;
-  --text-color: #82cdea;
-  --text-color-link: #79e586;
-  --accent-color: #f6722a;
- }
+  :root {
+    --background-color: #04162a;
+    --background-color-light: #062444;
+    --text-color: #5fd2ff;
+    --text-color-link: #5dc86a;
+    --accent-color: #df7033;
+  }
+
+  main::before {
+    filter: opacity(0.15) contrast(1.2) brightness(1.1) saturate(1.1) !important;
+  }
 }
 
 //.high-contrast {
